redesign; optimize app architecture

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#7200ca" />
   <link rel="manifest" href="manifest.json" />
-  <title>Sunshine Schedule</title>
+  <title>Keste - Расписание занятий</title>
 </head>
 <body>
   <div id="root"></div>
